# http-server-rust

./: .gitignore  Cargo.toml  README.md  cert.pem  key.pem  mise.toml
assets/: index.html  style.css
crates/http-core/: Cargo.toml
crates/http-core/src/: lib.rs  request.rs  response.rs  test.rs
crates/logger/src/: lib.rs  tests.rs
crates/request/: Cargo.toml
crates/request/src/: lib.rs  test.rs
crates/response/: Cargo.toml
crates/response/src/: lib.rs  test.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  tests.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  tests.rs
crates/sslserver/: Cargo.toml
crates/sslserver/src/: lib.rs
crates/utils/src/: lib.rs
docker/: Dockerfile  compose.yml
src/: main.rs  request.rs  response.rs  server.rs
