[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
http-core = { path = "crates/http-core" }
router = { path = "crates/router" }
server = { path = "crates/server" }

[workspace]
members = [
    "crates/http-core",
    "crates/router",
    "crates/server",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
