[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
logger = { path = "crates/logger" }
request = { path = "crates/request" }
response = { path = "crates/response" }
router = { path = "crates/router" }
server = { path = "crates/server" }
sslserver = { path = "crates/sslserver" }
utils = { path = "crates/utils" }

[workspace]
members = [
    "crates/logger",
    "crates/request",
    "crates/response",
    "crates/router",
    "crates/server",
    "crates/sslserver",
    "crates/utils",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
